Version 0.4.4~dev

	* Fix RuntimeError due to changing dictionary while iterating over it,
	  closes: #3157.

Version 0.4.3

	* Add en/disabling sl2d through /etc/default/sl2d, closes: #2997.
	* Check for txt2tags in configure.
	* Catch more KeyError cases, refs: #3027.
	* ffmpeg_pipe_ezstream: add a default network timeout to ffmpeg.
	* ffmpeg_pipe_ezstream, ffmpeg_pipe_push: wait children before
	  exiting.

Version 0.4.2 Released on 2010/03/08

	* Catch KeyError exception in child_shutdown, closes: #2999.

Version 0.4.1 Released on 2010/03/02

	* Make "network_timeout" option actually work, closes: #2989.
	* Add try/except around attempts to write to subprocess stdout,
	  closes: #2994.
	* Catch exception when printing status in verbose mode and a process has
	  vanished from one of the lists, closes: #2993.

Version 0.4.0 Released on 2010/02/22

	* Move command parsing into its own method to improve readability.
	* Add support for url parameters in sl2d.conf, refs: #2245.
	* Replace custom flatten by equivalent function from sjutils.
	* Add support for setting environment variables for main command.
	* Support network timeout variable, closes: #2791.
	* Fix a syntax error triggered in exception handling of post-commands.
	* Fix unreachable call to shutdown.
	* Adapt scripts to network_timeout option, refs: #2791.

Version 0.3.7 Released on 2009/12/10

	* Use parsed URL elements for POST request headers, closes: #2650.
	* scripts/ffmpeg_pipe_push.sh: silence annoying kill messages.
	* Avoid log write failures on daemon shutdown.
	* Avoid a few more potentially recurring backtraces in daemon and
	  scripts/push.py.

Version 0.3.6 Released on 2009/11/05

	* Fix command line generation, closes: #2558.

Version 0.3.5 Released on 2009/11/03

	* Fix stupid key error, closes: #2547
	* Bit rates are now expressed in kbytes, closes: #2539

Version 0.3.4 Released on 2009/10/28

	* Prepare_ezstream_conf set 644 mode at the generated configuration, closes: #2426